production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-eap
    app.kubernetes.io/component: app-eap
    app.kubernetes.io/instance: app-eap
  name: app-eap
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: app-eap    
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: app-eap
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/oqss-prod/app-eap:latest
        imagePullPolicy: IfNotPresent
        name: app-eap
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
